welcome.lessons.welcome.array.search.IndexOfValue.scala.code
def indexOfValue(nums:Array[Int] ,lookingFor:Int): Int = {
  for (r <- 0 to 3  ) {
    if (nums(r)==lookingFor){
      return r
    }else {
      return -1
    }
    }
  }
